# MREs

./: .gitignore  README.md
71277420/: mypy-pandas-iterrows.py
cyberforum-ru/3213759/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
cyberforum-ru/3213759/src/: main.cpp
discourse-cmake-org/11052/: CMakeLists.txt  README.md  some.cs
discourse-cmake-org/14973/: CMakeLists.txt  GetSdkVersionSample.cpp  main.cpp
discourse-cmake-org/14973/Include/: R3DSDK.h  R3DSDKCuda.h  R3DSDKCustomIO.h  R3DSDKDecoder.h  R3DSDKDefinitions.h  R3DSDKMetadata.h  R3DSDKMetal.h  R3DSDKOpenCL.h  R3DSDKStream.h
discourse-cmake-org/14973/Lib/win64/: R3DSDK-2017MD.lib
discourse-cmake-org/15161/: README.md
discourse-cmake-org/15161/dpndnc/: CMakeLists.txt
discourse-cmake-org/15161/dpndnc/cmake/: Installing.cmake
discourse-cmake-org/15161/dpndnc/include/some/: some.h
discourse-cmake-org/15161/dpndnc/libraries/: CMakeLists.txt
discourse-cmake-org/15161/dpndnc/libraries/dep-var-1/: CMakeLists.txt
discourse-cmake-org/15161/dpndnc/libraries/dep-var-1/src/: some.cpp  stuff.h
discourse-cmake-org/15161/dpndnc/libraries/dep-var-2/: CMakeLists.txt
discourse-cmake-org/15161/dpndnc/libraries/dep-var-2/src/: another.cpp  stuff.h
discourse-cmake-org/15161/tl/: CMakeLists.txt
discourse-cmake-org/15161/tl/src/: main.cpp
discourse-gohugo-io/52328/: .gitignore  hugo.toml
discourse-gohugo-io/52328/content/about/: index.md
discourse-gohugo-io/52328/content/posts/my-first-post/: index.md
discourse-gohugo-io/52328/content/posts/my-second-post/: index.md
discourse-gohugo-io/52328/layouts/_default/_markup/: render-link.html
discourse-gohugo-io/52328/themes/decovar/: theme.toml
discourse-gohugo-io/52328/themes/decovar/assets/css/: bootstrap-icons.scss  comments.scss  content.scss  header.scss  listing.scss  main-phone.scss  main-tablet.scss  main.scss  sidebar.scss  texts.scss  top.scss
discourse-gohugo-io/52328/themes/decovar/assets/css/hamburgers/: hamburgers.scss
discourse-gohugo-io/52328/themes/decovar/layouts/: index.html  robots.txt
discourse-gohugo-io/52328/themes/decovar/layouts/_default/: baseof.html  list.html  single.html
discourse-gohugo-io/52328/themes/decovar/layouts/partials/: breadcrumbs.html  header.html  pagination.html  sidebar.html
discourse-gohugo-io/52328/themes/decovar/layouts/posts/: list.html  single.html
discourse-gohugo-io/52328/themes/decovar/layouts/tag/: list.html
discourse-gohugo-io/52328/themes/decovar/static/: 401.html  403.html  404.html
discourse-gohugo-io/52328/themes/decovar/static/css/: http-errors.css
stackoverflow-com/71277420/: mypy-pandas-iterrows.py
